--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ langchain = "^0.0.310"
 chromadb = "^0.4.13"
 pypdf = "^3.16.2"
 sentence-transformers = "^2.2.2"
+huggingface-hub = "^0.17.3"
+dotenv-python = "^0.0.1"
 
 
 [build-system]
